--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
+  workflow_dispatch: # Trigger the workflow manually
   push:
     branches:
       - main # Trigger the workflow when pushing to the main branch
